VOici le deuxieme commit

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <h2>Section 3</h2>
             <p>Ceci est la troisième section de ma page.</p>
         </section>
+        <section id="section3">
+            <h2>Section 3</h2>
+            <p>Ceci est le deuxième commit.</p>
+        </section>
     </main>
     
     <footer>
