VOici le Troisieme commit

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
             <p>Ceci est la troisième section de ma page.</p>
         </section>
         <section id="section3">
-            <h2>Section 3</h2>
+            <h2>Section 4</h2>
             <p>Ceci est le deuxième commit.</p>
+        </section>
+        <section id="section3">
+            <h2>Section 5</h2>
+            <p>Ceci est le troisième commit.</p>
         </section>
     </main>
     
